# artflow

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
notes/: multi_dataset_mixing.md  reading_plan.md
scripts/: evaluate.sh  evaluate_checkpoints.py  export_prompts.sh  export_scores.sh  precompute.sh  precompute_dataset.py  score_images.sh  stage0.sh  stage1.sh  train.sh  train_rm.sh  train_stage0.py  train_stage1.py  train_uncond.sh  upload_to_hf.py  verify_dataset.py
src/: __init__.py  model.py
src/data/: curate_dataset.py  get_captions.py
src/dataset/: __init__.py  buckets.py  captions.py  concat.py  curate_dataset.py  dataloader_utils.py  get_captions.py  inspect_wikiart_dataset.py  mix.py  precompute.py  sampler.py  score_images.py  verify_dataset.py
src/evaluation/: __init__.py  evaluate_checkpoints.py  metrics.py  pipeline.py  visualize.py
src/flow/: __init__.py  paths.py  solvers.py
src/models/: __init__.py  artflow.py  artflow_fused.py  artflow_hybrid.py  artflow_pure.py  artflow_uncond.py  dit_blocks.py  reward_model.py
src/pipeline/: __init__.py  artflow_pipeline.py  encode_text.py  evaluation.py
src/tests/: test_dit_blocks.py  test_evaluation.py  test_models.py
src/train/: __init__.py  precompute.py  stage0.py  stage1.py  train.py  train_rm.py  train_uncond.py
tests/: test_dataloader_stage1.py  test_dataloader_utils.py  test_dit_blocks.py  test_evaluation.py  test_mix.py  test_models.py  test_precompute.py  test_precompute_refactor.py  test_reward_model.py  test_sampler.py  test_sde_sampler.py  test_time_shift.py
(+6 files in other folders)
