[project]
name = "artflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "diffusers>=0.35.2",
    "fvcore>=0.1.5.post20221221",
    "gradio>=5.49.1",
    "huggingface-hub>=0.35.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "swanlab>=0.7.2",
    "torch>=2.9.0",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    "fvcore>=0.1.5.post20221221"
]
